Update resume_image.html and works_creative.html with new technologies and stack information

--- a/resume_image.html
+++ b/resume_image.html
@@ -363,8 +363,8 @@
 									</div>
 
 									<div class="slide-gpt">
-										<img width="326" height="326" src="https://img.icons8.com/ios/326/FFFFFF/aws-cloudfront.png"
-											alt="aws-cloudfront" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/terraform.png"
+											alt="terraform" />
 										<img width="326" height="326" src="https://img.icons8.com/color/326/docker.png" alt="docker" />
 										<img width="326" height="326" src="https://img.icons8.com/office/326/react.png" alt="react" />
 										<img width="326" height="326"
@@ -379,13 +379,16 @@
 									</div>
 
 									<div class="slide-gpt">
-										<img width="326" height="326" src="https://img.icons8.com/color/326/jenkins.png" alt="jenkins" />
-										<img width="326" height="326" src="https://img.icons8.com/color/326/prometheus-app.png"
-											alt="prometheus-app" />
-										<img width="326" height="326" src="https://img.icons8.com/color/326/grafana.png" alt="grafana" />
-										<img width="326" height="326" src="https://img.icons8.com/color/326/ansible.png" alt="ansible" />
 										<img width="326" height="326" src="https://img.icons8.com/color/326/kubernetes.png"
 											alt="kubernetes" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/ansible.png" alt="ansible" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/jenkins.png" alt="jenkins" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/grafana.png" alt="grafana" />
+										<img width="326" height="326" src="https://img.icons8.com/color/326/prometheus-app.png"
+											alt="prometheus-app" />
+
+
+
 									</div>
 								</div>
 							</div>
@@ -448,7 +451,7 @@
 								<div class="name">Cloudflare</div>
 							</li>
 							<li>
-								<div class="name">Cloudfront</div>
+								<div class="name">Terraform</div>
 							</li>
 							<li>
 								<div class="name">Nginx</div>
