--- a/works_creative.html
+++ b/works_creative.html
@@ -374,8 +374,8 @@
 										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
 										<p style="color:white; margin-top:5px;">
 											Designed the database and software architecture, developed the backend, created an admin panel
-											using Svelte and integrated it with the backend, built a CI/CD pipeline using Jenkins and Ansible,
-											and hosted and maintained the application on Azure.
+											using Svelte and integrated it with the backend, built a CI/CD pipeline using Jenkins,
+											and hosted and maintained the application on Azure using Terraform and Ansible.
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
