Update works_creative.html with corrected project URL

--- a/works_creative.html
+++ b/works_creative.html
@@ -386,7 +386,7 @@
 
 
 										</p> -->
-										<a href="https://www.octobrain.org" class="btn hover-animated">
+										<a href="https://octobrain.org" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Webapp</span>
 										</a>
