Update resume_image.html with new project name and stack information

--- a/resume_image.html
+++ b/resume_image.html
@@ -206,13 +206,14 @@
 					<div class="desc">
 						<p>Hello! I'm Aukik Aurnab. I am a lifelong learner who finds joy in acquiring knowledge. My interests often
 							align with my career, making the learning process feel less like work and more like a personal adventure.
-							I am not just confined to my field of work, I love to gather diversified knowledge on various fields. I
-							value freedom and prefer to do things in my own way. This doesn't mean I disregard advice. In fact, I take
-							advice from people based on their credibility over the topic. This approach helps me make informed
-							decisions and be efficient in my work. One of my defining traits is that I love playing the long-term
-							game. I believe in making decisions that will benefit me in the long run, rather than seeking instant
-							gratification. In essence, I am someone who loves learning, values freedom and efficiency, and is always
-							planning for the future.</p>
+							I am not just confined to my field of work; I love to gather diversified knowledge on various fields. I
+							value freedom. This doesn't mean I disregard advice. In fact, I take advice from people based on their
+							credibility over the topic. This approach helps me make informed decisions and be efficient in my work.
+							One of my defining traits is that I love playing the long-term game. I believe in making decisions that
+							will benefit me in the long run, rather than seeking instant gratification. In essence, I am someone who
+							loves learning, values freedom and efficiency, and is always planning for the future. One of my hobbies is
+							learning new things daily on the internet and binge-watching videos and tutorials about the latest tech
+							trends.</p>
 						<div class="info-list">
 							<ul>
 								<li><strong>Current Position: </strong>CTO</li>
@@ -551,7 +552,7 @@
 
 								<div class="resume-item content-box active">
 									<div class="date">May 2023 - Present</div>
-									<div class="name">Chief Technology Officer-Bismo</div>
+									<div class="name">Chief Technology Officer - Bismo</div>
 									<dive class="text">As a Team Lead, I specialize in system architecture, backend development with
 										Express, PrismaORM, database engineering (especially PostgreSQL), test automation
 										using Jest, SuperTest, and Playwright, implementing Reverse Proxy (Nginx) and CDNs (Cloudflare &
@@ -559,6 +560,14 @@
 										leveraging RAG techniques (Qdrant),
 										bottleneck discovery and latency minimization with Wireshark and Fiddler, and deployment using
 										Docker containers, Kubernetes and building CI/CD pipelines using Jenkins and Azure Pipelines.</dive>
+								</div>
+
+								<div class="resume-item content-box active">
+									<div class="date">Feb 2024 - Present</div>
+									<div class="name">Chief Technology Officer - Katerout</div>
+									<dive class="text">Built the entire MVP from scratch for a catering marketplace platform. Maintain
+										cloud architecture in Azure using Terraform and Ansible. Set up CI/CD pipelines with Jenkins and
+										implemented monitoring tools such as Prometheus and Grafana.</dive>
 								</div>
 
 								<div class="resume-item content-box">
@@ -599,23 +608,13 @@
 									<div class="text">GPA: 5.00 out of 5.00</div>
 								</div>
 
-								<div class="resume-item content-box" style="border-bottom: 2px solid white;">
+								<div class="resume-item content-box">
 									<div class="date">2016</div>
 									<div class="name">South Point School and College</div>
 									<div class="text">Secondary School Certificate in Science </div>
 									<div class="text">GPA: 5.00 out of 5.00</div>
 								</div>
-								<br>
-								<br>
-								<div class="title">
-									<div class="title_inner">PUBLICATION</div>
-								</div>
-								<div class="resume-item content-box" style="margin: 0 0 0 0;">
-									<div class="name">Comparative analysis of machine learning techniques in optimal site selection</div>
-									<div class="date">December 2023</div>
-									<div class="text">DOI: 10.1109/ICCIT60459.2023.10441367</div>
-									<div class="text"><a href="https://ieeexplore.ieee.org/document/10441367">Show IEEE Paper</a></div>
-								</div>
+
 							</div>
 						</div>
 
@@ -679,7 +678,7 @@
 									<div class="text"><a href="https://www.coursera.org/account/accomplishments/verify/WT5MDAYVTXT7">Show
 											Certification</a></div>
 								</div>
-								<div class="resume-item content-box">
+								<div class="resume-item content-box" style="border-bottom: 2px solid white;">
 									<div class="name">Udemy Katonic MlOps</div>
 									<div class="date">March 2023</div>
 									<div class="name">Issued by: Udemy</div>
@@ -691,6 +690,20 @@
 									<div class="text"><a
 											href="https://www.udemy.com/certificate/UC-0ec6aa52-91ac-45fa-ab4b-9c6e34df3d5d/">Show
 											Certification</a></div>
+								</div>
+
+								<br>
+								<br>
+
+								<div class="title">
+									<div class="title_inner">PUBLICATION</div>
+								</div>
+
+								<div class="resume-item content-box">
+									<div class="name">Comparative analysis of machine learning techniques in optimal site selection</div>
+									<div class="date">December 2023</div>
+									<div class="text">DOI: 10.1109/ICCIT60459.2023.10441367</div>
+									<div class="text"><a href="https://ieeexplore.ieee.org/document/10441367">Show IEEE Paper</a></div>
 								</div>
 
 							</div>
