Update works_creative.html with updated project details and technologies

--- a/works_creative.html
+++ b/works_creative.html
@@ -373,15 +373,15 @@
 
 										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
 										<p style="color:white; margin-top:5px;">
-											Designed the database and software architecture, developed the backend, created an admin panel
+											Designed the database and software architecture, developed the backend and frontend, created an
+											admin panel
 											using Svelte and integrated it with the backend, built a CI/CD pipeline using Jenkins,
 											and hosted and maintained the application on Azure using Terraform and Ansible.
 										</p>
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS, Postgresql, PostGIS, Prisma
-											ORM, Azure App
-											Service, Docker, Svelte, Tailwind CSS, Azure Container Registry, Azure blob storage</p>
+										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS, Svelte, Postgresql, Prisma
+											ORM, Azure VM, Docker, Azure blob storage, Jenkins, Terraform, Prometheus, Grafana, Ansible</p>
 										<!-- <p>
 
 
