--- a/index.html
+++ b/index.html
@@ -154,17 +154,18 @@
 						<div class="swiper-container">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide first">
-									<div class="main-img" style="background-image: url(images/started_image.png);"></div>
+									<div class="main-img" style="background-image: url(images/new/2.jpg);"></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="main-img" style="background-image: url(images/keyboard-image-2.jpg);"></div>
+									<div class="main-img" style="background-image: url(images/new/3.jpg);"></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="main-img" style="background-image: url(images/cpu-image-2.jpg);"></div>
+									<div class="main-img" style="background-image: url(images/new/4.jpg);"></div>
 								</div>
 								<div class="swiper-slide">
-									<div class="main-img" style="background-image: url(images/setup-pc.jpg);"></div>
+									<div class="main-img" style="background-image: url(images/new/5.jpg);"></div>
 								</div>
+
 							</div>
 						</div>
 					</div>
@@ -182,7 +183,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>Aukik Aurnab</strong>, Chief Technology Officer<br />
+								Hello, I'm <strong>Aukik Aurnab</strong>, Chief Technology Officer<br />
 								of Bismo.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
