--- a/resume_image.html
+++ b/resume_image.html
@@ -166,7 +166,7 @@
 			<div class="section started section-title" id="section-started">
 
 				<!-- background -->
-				<div class="video-bg jarallax" style="background-image: url(images/keyboard-image-2.jpg);">
+				<div class="video-bg jarallax" style="background-image: url(images/new/3.jpg);">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -455,6 +455,12 @@
 								<div class="name">Terraform</div>
 							</li>
 							<li>
+								<div class="name">Pulumi</div>
+							</li>
+							<li>
+								<div class="name">NestJS</div>
+							</li>
+							<li>
 								<div class="name">Nginx</div>
 							</li>
 							<li>
@@ -465,6 +471,9 @@
 							</li>
 							<li>
 								<div class="name">Express.js</div>
+							</li>
+							<li>
+								<div class="name">Next.js</div>
 							</li>
 							<li>
 								<div class="name">Node.js</div>
