--- a/works_creative.html
+++ b/works_creative.html
@@ -181,8 +181,78 @@
 						</div>
 					</div> -->
 
+
+
 					<!-- portfolio items -->
 					<div class="box-items portfolio-items">
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-103" class="has-popup-media hover-animated">
+									<img src="images/ai-assistant.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">AI Assistant</span>
+													<span class="name">AI Buddy</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-103" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/ai-assistant-desktop.png); background-size: 100% auto; height:300px;">
+									</div>
+									<div class="desc single-post-text">
+										<div class="category">AI Assistant</div>
+										<h4>Virtual Assistant</h4>
+										<h5 style="color:white;">AI-Powered Virtual Assistant</h5>
+										<p>
+											An intelligent virtual assistant designed to manage daily workflows, track progress, and provide
+											decision support. It's an ongoing project.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Features of the Virtual Assistant</h5>
+										<ul>
+											<li>Morning summaries with task prioritization</li>
+											<li>Dynamic task reordering based on real-time data</li>
+											<li>Actionable insights into AI industry trends</li>
+											<li>Competitor activity monitoring</li>
+											<li>Decision-making support with pros and cons analysis</li>
+											<li>Integration with Activity Watch for task tracking and focus management</li>
+											<li>Research capabilities using Perplexity</li>
+											<li>Customizable writing tones and styles</li>
+											<li>Daily reminders and focus alerts</li>
+											<li>Progress tracking and notifications</li>
+										</ul>
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Built the entire application from scratch, including designing the system architecture,
+											implementing
+											AI-powered features, integrating third-party APIs, and developing the UI/UX.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">OpenAI, Azure AI Foundry, Python, FastAPI, Qdrant,
+											LangChain, Streamlit, Pandas, Pydantic, Redis, Azure
+
+										</p>
+
+										<a href="#" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">Learn More</span>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-1" class="has-popup-media hover-animated">
