--- a/resume_image.html
+++ b/resume_image.html
@@ -5,7 +5,7 @@
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="CV & Resume Template" />
+	<meta name="description" content="Aukik Aurnab" />
 	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cvio, portfolio" />
 	<meta name="author" content="Aukik Aurnab" />
 
