--- a/contacts_map.html
+++ b/contacts_map.html
@@ -197,7 +197,7 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-envelope"></span></div>
 								<div class="name">Email</div>
-								<div class="text"><a href="mailto:aurnab@bismoapps.com">aurnab@bismoapps.com</a></div>
+								<div class="text"><a href="mailto:aukikaurnabx@gmail.com">aukikaurnabx@gmail.com</a></div>
 							</div>
 						</div>
 
@@ -265,7 +265,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>E: aurnab@bismoapps.com</p>
+				<p>E: aukikaurnabx@gmail.com</p>
 				<p>T: +880 (168) 007 7890</p>
 			</div>
 			<div class="soc-box">
