--- a/index.html
+++ b/index.html
@@ -187,11 +187,15 @@
 								of Bismo.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>SaaS product <strong>builder</strong></p>
-								<p>Expert software <strong>dev team lead</strong></p>
-								<p>System design <strong>enthusiast</strong></p>
-								<p>Vertical <strong>AI integration</strong></p>
-								<p>Delivering simplified <strong>user exp</strong></p>
+								<p>2x Startup <strong>Technical Founder</strong></p>
+								<p>2+ years of experience on <strong>AI Agents/LLMs </strong></p>
+								<p>Built social media <strong>1000+ users</strong></p>
+								<p>Designed and built <strong>15 webapps</strong></p>
+								<p>Created 9 <strong>AI agents and pipelines</strong></p>
+								<p>Completed <strong>15+ paid client projects</strong></p>
+								<p>Worked on around <strong>30 projects</strong></p>
+								<p>Full-Stack <strong>AI Engineer</strong></p>
+								<p>Built ticketing platform <strong>600+ users</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
@@ -205,7 +209,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>E: aurnab@bismoapps.com</p>
+				<p>E: aukikaurnabx@gmail.com</p>
 				<p>P: +880 168 007 7890</p>
 			</div>
 			<div class="soc-box">
