--- a/resume_image.html
+++ b/resume_image.html
@@ -198,28 +198,42 @@
 				<div class="content content-box">
 
 					<!-- image -->
-					<div class="image">
+					<div class="image" style="margin-top: 50px;">
 						<img src="images/man2.png" alt="" />
 					</div>
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! I'm Aukik Aurnab. I am a lifelong learner who finds joy in acquiring knowledge. My interests often
-							align with my career, making the learning process feel less like work and more like a personal adventure.
-							I am not just confined to my field of work; I love to gather diversified knowledge on various fields. I
-							value freedom. This doesn't mean I disregard advice. In fact, I take advice from people based on their
-							credibility over the topic. This approach helps me make informed decisions and be efficient in my work.
-							One of my defining traits is that I love playing the long-term game. I believe in making decisions that
-							will benefit me in the long run, rather than seeking instant gratification. In essence, I am someone who
-							loves learning, values freedom and efficiency, and is always planning for the future. One of my hobbies is
-							learning new things daily on the internet and binge-watching videos and tutorials about the latest tech
-							trends.</p>
+						<!-- <p> -->
+						<ul>
+							<li>2x Product Based Startup Technical Founder</li>
+							<li>Built and scaled a <span style="color: #4bffa5;">social media platform</span> with around <span
+									style="color: #4bffa5;">1,000 active users</span></li>
+							<li>Designed and implemented <span style="color: #4bffa5;"> 15 web applications</span> across diverse
+								industries</li>
+							<li>Created<span style="color: #4bffa5;"> 9 AI solutions</span> including chatbots, agents, scrapers, ML
+								pipelines and automation
+								systems for paying clients</li>
+							<li>Completed around<span style="color: #4bffa5;"> 20 paid client</span> projects</li>
+							<li>Built an expense management solution with over <span style="color: #4bffa5;">100 standalone
+									features</span></li>
+							<li><span style="color: #4bffa5;">2+ years of experience working with AI Agents and LLMs</span> since
+								OpenAI's inception</li>
+							<li>Developed RAG pipelines and Copilot-like systems before these terms were coined in the market
+							</li>
+							<li>Worked on approximately <span style="color: #4bffa5;">30 projects</span></li>
+							<li>Created complete solutions including both user-facing applications and admin panels</li>
+							<li>Delivered solutions for finance, education, events, e-commerce and specialized business tools
+							</li>
+							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> over 600 users</span></li>
+						</ul>
+						<!-- </p> -->
 						<div class="info-list">
 							<ul>
 								<li><strong>Current Position: </strong>CTO</li>
 								<li><strong>Company:</strong> Bismo</li>
 								<li><strong>Phone:</strong> +880 168 007 7890</li>
-								<li><strong>E-mail:</strong> aurnab@bismoapps.com</li>
+								<li><strong>E-mail:</strong> aukikaurnabx@gmail.com</li>
 							</ul>
 						</div>
 						<div class="bts">
@@ -248,13 +262,16 @@
 
 						<div class="service-col">
 							<div class="service-item content-box">
-								<div class="icon"><span class="fas fa-code"></span></div>
-								<div class="name">Web Development</div>
-								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
-									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
-									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub work. </div>
+								<div class="icon"><span class="fas fa-rocket"></span></div>
+								<div class="name">AI Agent and ML Integration</div>
+								<div class="text">Skilled in crafting data analysis pipelines and seamlessly developing and integrating
+									machine learning and language model (LLM) capabilities into diverse projects using tools like
+									Langchain and Streamlit. Developed custom knowledge base LLM implementations utilizing RAG techniques,
+									prompt engineering, fine-tuning small models and vector databases such as Pinecone, Qdrant, and FAISS.
+								</div>
 							</div>
 						</div>
+
 
 						<div class="service-col">
 							<div class="service-item content-box">
@@ -272,7 +289,7 @@
 								<div class="name">Cloud Architect</div>
 								<div class="text">Skilled in cloud hosting, reverse proxy, CDN implementation, version control,
 									Docker containerization and Kubernetes. Experienced with Azure, Cloudflare, Nginx, Ansible, Azure
-									Pipelines, Jenkins, Terraform and Git.</div>
+									Pipelines, Jenkins, Terraform, Pulumi and Git.</div>
 							</div>
 						</div>
 
@@ -295,16 +312,18 @@
 							</div>
 						</div>
 
+
 						<div class="service-col">
 							<div class="service-item content-box">
-								<div class="icon"><span class="fas fa-rocket"></span></div>
-								<div class="name">ML and LLM Integration</div>
-								<div class="text">Skilled in crafting data analysis pipelines and seamlessly developing and integrating
-									machine learning and language model (LLM) capabilities into diverse projects using tools like
-									Langchain and Streamlit. Developed custom knowledge base LLM implementations utilizing RAG techniques,
-									prompt engineering, and vector databases such as Pinecone, Qdrant, and FAISS.</div>
+								<div class="icon"><span class="fas fa-code"></span></div>
+								<div class="name">Web Development</div>
+								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
+									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
+									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub work. </div>
 							</div>
 						</div>
+
+
 
 					</div>
 
@@ -575,7 +594,8 @@
 									<div class="date">Feb 2024 - Present</div>
 									<div class="name">Chief Technology Officer - Katerout</div>
 									<dive class="text">Built the entire MVP from scratch for a catering marketplace platform. Maintain
-										cloud architecture in Azure using Terraform and Ansible. Set up CI/CD pipelines with Jenkins and
+										cloud architecture in Azure using Terraform, Pulumi and Ansible. Set up CI/CD pipelines with Jenkins
+										and
 										implemented monitoring tools such as Prometheus and Grafana.</dive>
 								</div>
 
@@ -814,7 +834,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="copy">
-			<p>E: aurnab@bismoapps.com</p>
+			<p>E: aukikaurnabx@gmail.com</p>
 			<p>P: +880 168 007 7890</p>
 		</div>
 		<div class="soc-box">
