--- a/resume_image.html
+++ b/resume_image.html
@@ -101,7 +101,7 @@
 
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
-					<a href="aukik_resume.pdf">
+					<a href="aukik_resume.pdf" target="_blank">
 						<span class="mask-lnk">Aukik <strong>Aurnab</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
 					</a>
@@ -237,7 +237,7 @@
 							</ul>
 						</div>
 						<div class="bts">
-							<a href="aukik_resume.pdf" class="btn hover-animated">
+							<a href="aukik_resume.pdf" target="_blank" class="btn hover-animated">
 								<span class="circle"></span>
 								<span class="lnk">Download CV</span>
 							</a>
