--- a/resume_image.html
+++ b/resume_image.html
@@ -217,7 +217,8 @@
 							<li>Completed around<span style="color: #4bffa5;"> 20 paid client</span> projects</li>
 							<li>Built an expense management solution with over <span style="color: #4bffa5;">100 standalone
 									features</span></li>
-							<li><span style="color: #4bffa5;">2+ years of experience working with AI Agents and LLMs</span> since
+							<li><span style="color: #4bffa5;">2+ years</span> of experience working with <span
+									style="color: #4bffa5;">AI Agents and LLMs</span> since
 								OpenAI's inception</li>
 							<li>Developed RAG pipelines and Copilot-like systems before these terms were coined in the market
 							</li>
