--- a/resume_image.html
+++ b/resume_image.html
@@ -204,6 +204,7 @@
 
 					<!-- desc -->
 					<div class="desc">
+						<p>Hello I am Aukik! With the intention of saving your time here is what my career looks so far</p>
 						<!-- <p> -->
 						<ul>
 							<li>2x Product Based Startup Technical Founder</li>
@@ -226,7 +227,7 @@
 							<li>Created complete solutions including both user-facing applications and admin panels</li>
 							<li>Delivered solutions for finance, education, events, e-commerce and specialized business tools
 							</li>
-							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> over 600 users</span></li>
+							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> over 2000 users</span></li>
 						</ul>
 						<!-- </p> -->
 						<div class="info-list">
@@ -318,7 +319,8 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-code"></span></div>
 								<div class="name">Web Development</div>
-								<div class="text">Adept in API development with Express.js and FastAPI, as well as with HTTP3 protocols
+								<div class="text">Adept in API development with Nest.js, Express.js and FastAPI, as well as with HTTP3
+									protocols
 									and implementing OpenAI APIs. Skilled in frontend development with React, Next.js and SvelteKit, and
 									in styling using Tailwind CSS. Implemented Redis for caching and RabbitMQ for pub-sub work. </div>
 							</div>
@@ -582,7 +584,9 @@
 								<div class="resume-item content-box active">
 									<div class="date">May 2023 - Present</div>
 									<div class="name">Chief Technology Officer - Bismo</div>
-									<dive class="text">As a Team Lead, I specialize in system architecture, backend development with
+									<dive class="text">As a Team Lead, I specialize in system architecture, building AI Agents and
+										workflow
+										automation pipelines, backend development with Nest.js,
 										Express, PrismaORM, database engineering (especially PostgreSQL), test automation
 										using Jest, SuperTest, and Playwright, implementing Reverse Proxy (Nginx) and CDNs (Cloudflare &
 										Cloudfront), frontend development (React/Svelte), integrating OpenAI APIs via tools like Langchain
