--- a/works_creative.html
+++ b/works_creative.html
@@ -132,11 +132,15 @@
 							<h1 class="h-title">Some of my Works</h1>
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-subtitle" style="display: none;">
-									<p>SaaS product builder <strong>extraordinaire.</strong></p>
-									<p>Expert team leader in <strong>software development.</strong></p>
-									<p>System design enthusiast, <strong>optimizing every detail.</strong></p>
-									<p>Vertical AI integration for <strong>workflow automation.</strong></p>
-									<p>Committed to delivering <strong>simplified user experiences.</strong></p>
+									<p>2x Startup <strong>Technical Founder</strong></p>
+									<p>2+ years of experience on <strong>AI Agents/LLMs </strong></p>
+									<p>Built social media <strong>1000+ users</strong></p>
+									<p>Designed and built <strong>15 webapps</strong></p>
+									<p>Created 9 <strong>AI agents and pipelines</strong></p>
+									<p>Completed <strong>15+ paid client projects</strong></p>
+									<p>Worked on around <strong>30 projects</strong></p>
+									<p>Full-Stack <strong>AI Engineer</strong></p>
+									<p>Built ticketing platform <strong>2000+ users</strong></p>
 								</div>
 								<span class="typed-subtitle"></span>
 							</div>
@@ -272,7 +276,7 @@
 										<h4>BISMO</h4>
 										<h5 style="color:white">Fullstack Enterprise Finance Management Software</h5>
 										<p>
-											A full-stack enterprise finance management solution with over 20 paid users and over 100
+											A full-stack enterprise finance management solution with over 20 paid users and 100+
 											standalone features that helps make
 											businesses more efficient.
 										</p>
@@ -458,64 +462,6 @@
 							</div>
 						</div>
 
-
-
-						<div class="box-item f-content">
-							<div class="image">
-								<a href="#popup-3" class="has-popup-media hover-animated">
-									<img src="images/solar-mockup.png" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-plus"></span>
-												<span class="desc">
-													<span class="category">WEBAPP</span>
-													<span class="name">Solar Mapping</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
-							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
-								<div class="content">
-									<div class="image"
-										style="background-image: url(images/solar.png); background-size: 100% auto; height:300px;"></div>
-									<div class="desc single-post-text">
-										<div class="category">WEBAPP</div>
-										<h4>Solar Mapping</h4>
-										<h5 style="color:white">Automated Solar Panel Mapping</h5>
-										<p>
-											A web app built for a paid client that maps solar panels over houses based on locations provided
-											on the embedded Google Map and Google Solar API in the landing page and generates cost estimations
-											and savings.
-										</p>
-										<p>
-											Through this, buyers of solar panels can check how the panels will look above their houses and
-											what the estimated costs, savings, and potential benefits are, such as the amount of federal tax
-											rebate they might get if they purchase from that company.
-										</p>
-
-										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
-										<p style="color:white; margin-top:5px;">
-											Developed the entire backend using the Google Solar API with FastAPI, created an algorithm to
-											dynamically structure data for image mapping,created caching techniques using Redis and built a
-											functional frontend in Svelte to display
-											solar mapping and related information.
-										</p>
-
-										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js,Tailwind CSS,
-											Redis</p>
-										<!-- <a href="works_single_1.html" class="btn hover-animated">
-											<span class="circle"></span>
-											<span class="lnk">View Project</span>
-										</a> -->
-									</div>
-								</div>
-							</div>
-						</div>
-
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-12" class="has-popup-media hover-animated">
@@ -585,6 +531,134 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-48" class="has-popup-media hover-animated">
+									<img src="images/bismo-ticketing.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">Ticketing Platform</span>
+													<span class="name">Bismo Ticketing</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-48" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<!-- <div class="image"> -->
+
+									<div class="image"
+										style="background-image: url(images/bismo-ticketing.png); background-size: 100% auto; height:300px;">
+									</div>
+
+									<div class="desc single-post-text">
+
+										<div class="category">Ticketing Platform</div>
+										<h4>Bismo Ticketing</h4>
+										<h5 style="color:white">Ticket Booking and Verfication Platform</h5>
+										<p>
+
+											Bismo's ticketing system is simple yet powerful, now live across multiple events handling over
+											2,000 users booking tickets. The platform can be seamlessly integrated into any event website,
+											allowing users to book tickets by simply completing a form. Upon booking, users receive their
+											e-tickets via email. These tickets contain QR codes that event organizers can verify using the
+											built-in QR scanner feature of the Bismo platform, creating a complete end-to-end ticketing
+											solution.
+											<!-- <a href="https://octobrain.org" target="_blank">Visit App Website</a> -->
+										</p>
+
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Designed, built, deployed and maintained the entire thing as a solo dev.
+										</p>
+
+
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">Nest.js, React.js, Postgresql, Prisma
+											ORM, Azure VM, Docker, Pulumi, Ansible</p>
+										<!-- <p>
+
+
+										</p> -->
+										<!-- <a href="https://app.sharefable.com/embed/demo/octobrain-social-netwo-vih81zso4cajiwtb"
+											target="_blank" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Demo</span>
+										</a> -->
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-3" class="has-popup-media hover-animated">
+									<img src="images/solar-mockup.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">WEBAPP</span>
+													<span class="name">Solar Mapping</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/solar.png); background-size: 100% auto; height:300px;"></div>
+									<div class="desc single-post-text">
+										<div class="category">WEBAPP</div>
+										<h4>Solar Mapping</h4>
+										<h5 style="color:white">Automated Solar Panel Mapping</h5>
+										<p>
+											A web app built for a paid client that maps solar panels over houses based on locations provided
+											on the embedded Google Map and Google Solar API in the landing page and generates cost estimations
+											and savings.
+										</p>
+										<p>
+											Through this, buyers of solar panels can check how the panels will look above their houses and
+											what the estimated costs, savings, and potential benefits are, such as the amount of federal tax
+											rebate they might get if they purchase from that company.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Developed the entire backend using the Google Solar API with FastAPI, created an algorithm to
+											dynamically structure data for image mapping,created caching techniques using Redis and built a
+											functional frontend in Svelte to display
+											solar mapping and related information.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">FastAPI, Google Solar API, Mongodb, Next.js,Tailwind CSS,
+											Redis</p>
+										<!-- <a href="works_single_1.html" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Project</span>
+										</a> -->
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+
+
 
 
 
