Hello, I'm <strong>Aukik Aurnab</strong>, Chief Technology Officer<br /> 								of Bismo and Katerout.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<div class="started-content">
 							<h1 class="h-title">
 								Hello, I'm <strong>Aukik Aurnab</strong>, Chief Technology Officer<br />
-								of Bismo.
+								of Bismo and Katerout.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
 								<p>2x Startup <strong>Technical Founder</strong></p>
